# enimate

./: Cargo.toml  README.md  demo.scm  references.txt  todo.txt
scenes/: animations.scm  circle.scm  components.scm  grid.scm  motions.scm  moving_circle.scm
src/: animation.rs  animation_ui.rs  builder.rs  component.rs  dynamics.rs  easing.rs  group.rs  interpolation.rs  main.bak.rs  main.rs  mesh.rs  model.rs  motion.rs  motion_ui.rs  object.rs  object_tree.rs  properties.rs  renderer.rs  scene.rs  scene_builder.rs  shader.wgsl  shapes.rs  spacing.rs  spatial.rs  timing.rs  trigger.rs  typst.rs  utils.rs  world.rs
src/building/: builder.rs  component.rs  mod.rs  object.rs  scene.rs  spatial.rs  temporal.rs
