[package]
name = "enimate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
comemo = "0.4.0"
dyn-clone = "1.0.17"
eframe = { version = "0.24.1", features = ["wgpu"] }
egui = { version = "0.24.1", features = ["bytemuck"] }
line_drawing = "1.0.0"
lyon = "1.0.1"
lyon_svg = "0.17.2"
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
typst = "0.11.0"
typst-assets = { version = "0.11.0", features = ["fonts"] }
typst-svg = "0.11.0"
usvg = "0.15.0"
# wgpu = { version = "0.18.0", default-features = false, features = ["naga"] }
